feat: Provide author details endpoint
